--- a/main.css
+++ b/main.css
@@ -41,13 +41,28 @@ h3 {
     font-weight: 400;
     font-style: normal;
     color: rgb(41, 40, 30);
-
 }
 
-
-
-.special {
-    background-color: white;
-    color: brown;
-    border-radius: 30px;
+ul {
+    font-family: "elza", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: rgb(41, 40, 30);
+    font-size: 18px;
 }
+
+a {
+    color: rgb(255, 119, 232);
+}
+
+img {
+    width: 70%;
+    margin: auto;
+    display: block;
+}
+
+/* .catpic {
+    width: 20px;
+    display: block;
+    margin: auto;
+} */
