--- a/index.css
+++ b/index.css
@@ -1,64 +1,41 @@
 html {
-    background-color: rgb(255, 240, 223);
+    background-color:  rgb(222, 240, 206);
 }
-
 
 body {
-    font-size: 20px;
-}
-
-p {
-    background-color: rgb(248, 225, 225);
-    color: rgb(41, 40, 30);
-    /* border: solid 5px white; */
-    text-align: center;
-    margin: 25px;
-    padding: 50px;
-    border-radius: 50%;
-    font-family: "elza", sans-serif;
-    font-weight: 400;
+    font-family: "galix-mono-thin", sans-serif;
+    font-weight: 200;
     font-style: normal;
 }
 
 h1 {
-    font-size: 40px;
-    color: rgb(41, 40, 30);
-    font-family: "cooper-black-std", serif;
-    font-weight: 400;
-    font-style: italic;
-    text-align: center;
+    margin-top: 220px;
+    margin-bottom: 0px;
+        text-align: center;
+
 }
 
-h3 {
-    font-family: "elza", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    color: rgb(41, 40, 30);
-}
-
-li {
-    font-family: "elza", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    text-align: center;
-    text-decoration: none;
-    list-style-type: none;
-    background-color: rgb(255, 161, 191);
+p {
+    margin-top: 40px;
+    margin-left: 30%;
+    margin-right: 30%;
+    background-color: antiquewhite;
+    padding: 70px;
     border-radius: 15px;
-    padding: 6px;
-    margin-left: 20%;
-    margin-right: 20%;
-}
+    border-color:black;
+    border-style: solid;
+    border-width: 3px;
+        text-align: center;
 
-ul {
-    font-family: "elza", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    color: rgb(41, 40, 30);
-    font-size: 18px;
 }
 
 a {
-    color: rgb(10, 8, 9);
+    margin-left: 100px;
+    margin: 50px;
     text-decoration: none;
+    color: black;
+    font-family: "galix-mono", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    text-align: left;
 }
