--- a/index.css
+++ b/index.css
@@ -1,41 +1,69 @@
-html {
-    background-color:  rgb(222, 240, 206);
-}
+/* Parabolica Text Bold
+font-family: "parabolica-text", sans-serif;
+font-weight: 700;
+font-style: normal; */
 
 body {
-    font-family: "galix-mono-thin", sans-serif;
-    font-weight: 200;
+    font-size: 20px;
+    /* background-color: rgb(59, 55, 50); */
+}
+
+#bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    object-fit: cover;
+}
+
+p {
+    text-align: center;
+    margin: 25px;
+    padding: 50px;
+    border-radius: 50%;
+    font-family: "parabolica-text", sans-serif;
+    font-weight: 700;
     font-style: normal;
 }
 
 h1 {
-    margin-top: 220px;
-    margin-bottom: 0px;
-        text-align: center;
-
+    font-size: 20px;
+    color: rgb(255, 253, 233);
+    font-family: "parabolica-text", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    margin-top: 180px;
+    text-align: center;
 }
 
-p {
-    margin-top: 40px;
+li {
+    font-family: "elza", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
+    text-decoration: none;
+    list-style-type: none;
+    background-color: rgba(255, 253, 233, 0.691);
+    border-radius: 2px;
+    padding: 4px;
     margin-left: 30%;
-    margin-right: 30%;
-    background-color: antiquewhite;
-    padding: 70px;
-    border-radius: 15px;
-    border-color:black;
-    border-style: solid;
-    border-width: 3px;
-        text-align: center;
+    margin-right:30%;
+}
 
+ul {
+    font-family: "elza", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: rgb(220, 159, 84);
+    font-size: 9px;
+    text-align: center;
+    margin: 0;
+    padding:0;
 }
 
 a {
-    margin-left: 100px;
-    margin: 50px;
+    color: rgb(10, 8, 9);
     text-decoration: none;
-    color: black;
-    font-family: "galix-mono", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    text-align: left;
 }
