--- a/passion-website/passion.css
+++ b/passion-website/passion.css
@@ -6,19 +6,7 @@ html {
 
 body {
     font-size: 20px;
-}
-
-p {
-    background-color: rgb(248, 225, 225);
-    color: rgb(41, 40, 30);
-    /* border: solid 5px white; */
-    text-align: center;
-    margin: 25px;
-    padding: 50px;
-    border-radius: 50%;
-    font-family: "elza", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    text-align: left;
 }
 
 h1 {
@@ -27,7 +15,8 @@ h1 {
     font-family: "cooper-black-std", serif;
     font-weight: 400;
     font-style: italic;
-    text-align: center;
+    text-align: left;
+    margin-bottom: 5%;
 }
 
 h2 {
@@ -42,6 +31,7 @@ h3 {
     font-weight: 400;
     font-style: normal;
     color: rgb(41, 40, 30);
+    margin-top: 10%;
 }
 
 ul {
@@ -56,14 +46,50 @@ a {
     color: rgb(255, 119, 232);
 }
 
+.journal {
+    background-color: black;
+    padding: 20px;
+        font-family: "elza", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    margin-bottom: 50px;
+}
+
+
 img {
     width: 70%;
-    margin: auto;
-    display: block;
+    /* margin: auto; */
+    /* display: block; */
 }
 
 .kitties {
     width: 20%;
     display: block;
     margin: auto;
+    align-items:normal;
+}
+
+
+
+
+
+/* journal */
+
+.week_ {
+    margin-top: 10%;
+    font-size: 20px;
+    background-color: black;
+    color: antiquewhite;
+    padding-left: 10px;
+}
+
+p {
+    color: rgb(41, 40, 30);
+    text-align: left;
+    margin-top: 25px;
+    font-family: "elza", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 15px;
+    margin-left: 10px;
 }
